--- a/README
+++ b/README
@@ -14,10 +14,17 @@ Initial Configuration
 3. Configure databases.yml under /config, set the appropriate database
 4. Run lib.model.schema.sql under /data/sql to establish database structure
 5. Run system.data.sql under /data/sql to populate necessary system data
-6. Delete all files and subdirectories under /cache
-7. Change php.ini max_upload_size and max_form_size to 10M, max_post_time and 
+6. Modify the admin password in user table
+7. Delete all files and subdirectories under /cache
+8. Change php.ini max_upload_size and max_form_size to 10M, max_post_time and 
 max_input_time to 300
-8. Require third party (from skule.ca) screen.css in www/css, and images in
+9. Require third party (from skule.ca) screen.css in www/css, and images in
 www
 
-Start at: domain/index.php
+Gateways
+---------
+
+- Start at: domain/index.php
+- Maintenance module start at: domain/index.php/siteadmin
+- Development environment start at: domain/courses_dev.php (make sure this file 
+  is removed in production environment
